lite ui clean and tweak

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -27,9 +27,9 @@
 
         <div class="row">
 
-            <div class="col-sm-4 col-lg-4 col-md-4">
+            <div class="col-sm-4 col-lg-offset-2 col-md-4">
 
-                <div class="well">
+                <div class="well col-lg-12">
                     @*<img src="" alt="" />*@
                     <div class="row">
 
@@ -74,54 +74,9 @@
 
             </div>
 
-            <div class="col-sm-4 col-lg-4 col-md-4">
+            
 
-                <div class="well">
-                    @*<img src="" alt="" />*@
-                    <div class="row">
-
-                        <h4>
-                            Reserve Your Tee Time Online
-                        </h4>
-
-                        <p>Reserving your tee time online is easy and fast.</p>
-
-                        <div class="row col-lg-12">
-
-                            <select class="form-control">
-                                <option>Select A Date</option>
-                                <option>Today</option>
-                                <option>Tomorrow</option>
-                                <option>This Saturday</option>
-                                <option>Tuesday</option>
-                            </select>
-
-                            <select class="form-control">
-                                <option>Select A Time</option>
-                                <option>Early</option>
-                                <option>Late</option>
-                                <option>Doesn't Matter</option>
-                            </select>
-                            <br />
-                        </div>
-
-                        <div class="row col-lg-12">
-                            <div class="btn-group pull-right">
-                                <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
-                                <ul class="dropdown-menu">
-                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-
-                </div>
-
-            </div>
-
-            <div class="col-sm-4 col-lg-4 col-md-4">
+            <div class="col-lg-4 col-md-4 col-sm-4">
 
                 <div class="well">
                     @*<img src="" alt="" />*@
@@ -160,14 +115,14 @@
                         </div>
 
                         @*<div class="row col-lg-12">
-                            <div class="btn-group pull-right">
-                                <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
-                                <ul class="dropdown-menu">
-                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                                </ul>
-                            </div>
-                        </div>*@
+                        <div class="btn-group pull-right">
+                            <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
+                            <ul class="dropdown-menu">
+                                <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                            </ul>
+                        </div>
+                    </div>*@
 
                         <div class="row col-lg-12">
                             <div class="pull-right">
