--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/custom.css
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/custom.css
@@ -1,5 +1,5 @@
 ﻿body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-family: 'Raleway', sans-serif;
     font-size: 14px;
     line-height: 1.428571429;
     color: #333333;
@@ -7,6 +7,7 @@
     background-image: url('img/background.JPG');
     background-size: 1600px 1200px;
     background-repeat: no-repeat;
+    -webkit-font-smoothing: antialiased;
 }
 
 .well {
@@ -14,7 +15,7 @@
   padding: 25px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
-  border-radius: 0px;
+  border-radius: 0;
   -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
 }
@@ -134,7 +135,7 @@ header .intro-text .intro-lead-in {
 header .intro-text .intro-heading {
     margin-bottom: 25px;
     text-transform: uppercase;
-    font-family: 'Raleway', sans-serif;weight
+    font-family: 'Raleway', sans-serif;
     font-size: 50px;
     font-weight: 700;
     line-height: 50px;
@@ -142,11 +143,12 @@ header .intro-text .intro-heading {
 
 .btn {
   display: inline-block;
-  padding: 6px 12px;
+  padding: 12px 12px;
   margin-bottom: 0;
+  margin-left: 6px;
   font-size: 14px;
+  height: 44px;
   font-weight: normal;
-  line-height: 1.428571429;
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
@@ -264,4 +266,13 @@ fieldset[disabled] .btn-buy.active {
 fieldset[disabled] .form-control {
   cursor: not-allowed;
   background-color: #eeeeee;
+}
+
+.top-title {
+    color: #444444;
+    width: auto;
+}
+
+.top-text {
+    width: auto;
 }
