--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -29,15 +29,15 @@
 
             <div class="col-sm-4 col-lg-offset-2 col-md-4">
 
-                <div class="well col-lg-12">
+                <div class="col-lg-12">
                     @*<img src="" alt="" />*@
                     <div class="row">
 
-                        <h4>
+                        <h4 class="top-title">
                             Reserve Your Tee Time Online
                         </h4>
 
-                        <p>Reserving your tee time online is easy and fast.</p>
+                        <p class="top-text">Reserving your tee time online is easy and fast.</p>
 
                         <div class="row col-lg-12">
 
@@ -55,18 +55,19 @@
                                 <option>Late</option>
                                 <option>Doesn't Matter</option>
                             </select>
-                            <br />
-                        </div>
 
-                        <div class="row col-lg-12">
-                            <div class="btn-group pull-right">
+                       
                                 <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
                                 <ul class="dropdown-menu">
                                     <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                                    <li><a ahref="#"><input type="button" style="width: 100%;"onclick="location.href='/Home/Buy';" value="Book" /></a></li>
+                                    <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
                                 </ul>
-                            </div>
+
                         </div>
+
+                       
+
+                    
 
                     </div>
 
@@ -78,15 +79,15 @@
 
             <div class="col-lg-4 col-md-4 col-sm-4">
 
-                <div class="well">
+                <div class="col-lg-12">
                     @*<img src="" alt="" />*@
                     <div class="row">
 
-                        <h4>
+                        <h4 class="top-title">
                             Get Some Balls
                         </h4>
 
-                        <p>Get ready for the ultimate in ball service.</p>
+                        <p class="top-text">Get ready for the ultimate in ball service.</p>
 
                         <div class="row col-lg-12">
 
@@ -110,25 +111,15 @@
                                 <option>Medium Basket</option>
                                 <option>Large Basket</option>
                             </select>
-
-                            <br />
-                        </div>
-
-                        @*<div class="row col-lg-12">
-                        <div class="btn-group pull-right">
-                            <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
-                            <ul class="dropdown-menu">
-                                <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                                <li><a ahref="#"><input type="button" style="width: 100%;" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-                            </ul>
-                        </div>
-                    </div>*@
-
-                        <div class="row col-lg-12">
-                            <div class="pull-right">
-                                <input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" />
+                            <div class="row col-lg-12">
+                                <div class="">
+                                    <input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" />
+                                </div>
                             </div>
+
                         </div>
+
+
 
                     </div>
 
