--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -5,35 +5,26 @@
 
 <div class="container">
 
-    <div class="col-sm-4 col-lg-4 col-md-4">
-        <div class="thumbnail">
-            <img src="../../Content/img/henry.png" alt="" />
-            <div class="caption">
-                <h4 class="pull-right">$64.99</h4>
-                <h4>
-                    <a href="#">Handyman Henry</a>
-                </h4>
-                <p>No job too small. Henry will clean up your unfinished honey dos.</p>
+    <div class="row">
+        <div class="col-md-4">
+            <div class="thumbnail">
+                <img src="../../Content/img/" alt="" />
+                <div class="caption">
+                    <h4 class="pull-right">$24.99</h4>
+                    <h4>
+                        <a href="#">Handyman Henry</a>
+                    </h4>
+                    <p>.</p>
+                </div>
             </div>
-            <hr />
-            <div class="ratings">
-                <p class="pull-right">12 reviews</p>
-                <p>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star"></span>
-                    <span class="glyphicon glyphicon-star-empty"></span>
-                </p>
-            </div>
+        </div>
+
+        <div class="col-md-8 thumbnail">
+            <iframe id='ifrm' src="@ViewBag.URL" height="550" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
+                Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
+            </iframe>
         </div>
     </div>
 
-
-    <div class="col-sm-4 col-lg-6 col-md-6 thumbnail">
-        <iframe id='ifrm' src="@ViewBag.URL" height="550" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
-            Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
-        </iframe>
-    </div>
 </div>
 
