--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
         </div>
         <!-- /.container -->
     </nav>
-    <div class="container body-content">
+    <div class="container">
         @RenderBody()
         <hr />
         <!-- Footer -->
