verbiage change + illustration add

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -8,11 +8,11 @@
     <div class="row">
         <div class="col-md-4">
             <div class="thumbnail">
-                <img src="../../Content/img/" alt="" />
+                <img src="../../Content/img/ball-tee-300.png" alt="golf-tee-logo" />
                 <div class="caption">
-                    <h4 class="pull-right">$24.99</h4>
+                    <h4 class="pull-right">$4.99</h4>
                     <h4>
-                        <a href="#">Handyman Henry</a>
+                        <a href="#">Golf Balls</a>
                     </h4>
                     <p>.</p>
                 </div>
