--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -40,10 +40,10 @@
     <div class="col-sm-6">
 
         <h4 class="top-title">
-            Get Some Balls
+            Get Some Golf Balls
         </h4>
 
-        <p class="top-text">Get ready for the ultimate in ball service.</p>
+        <p class="top-text">The Ultimate Golf Ball Service.</p>
 
         <div class="row col-lg-12">
 
@@ -62,7 +62,7 @@
             </select>
 
             <select class="form-control">
-                <option>Select Balls</option>
+                <option>Select Golf Balls</option>
                 <option>Small Basket</option>
                 <option>Medium Basket</option>
                 <option>Large Basket</option>
