layout for But is now responsive (iframe)

--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -6,7 +6,7 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
             <div class="thumbnail">
                 <img src="../../Content/img/ball-tee-300.png" alt="golf-tee-logo" />
                 <div class="caption">
@@ -19,10 +19,12 @@
             </div>
         </div>
 
-        <div class="col-md-8 thumbnail">
-            <iframe id='ifrm' src="@ViewBag.URL" height="550" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
-                Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
-            </iframe>
+        <div class="col-lg-6 col-md-6 col-sm-8 col-xs-8">
+            <div class="thumbnail">
+                <iframe id='ifrm' src="@ViewBag.URL" height="550" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
+                    Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
+                </iframe>
+            </div>
         </div>
     </div>
 
