--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Buy.cshtml
@@ -2,25 +2,15 @@
     ViewBag.Title = "Buy";
 }
 
-
-<div class="container">
-
+<div class="container-fluid">
     <div class="row">
-        <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-            <div class="thumbnail">
-                <img src="../../Content/img/ball-tee-300.png" alt="golf-tee-logo" />
-                <div class="caption">
-                    <h4 class="pull-right">$4.99</h4>
-                    <h4>
-                        <a href="#">Golf Balls</a>
-                    </h4>
-                    <p>.</p>
-                </div>
-            </div>
+        <div class="col-lg-push-1 col-md-2 col-sm-3 col-xs-4">
+            <img src="../../Content/img/ball-on-tee.png" alt="" />
+            <h4 class="text-center">$4.99<br />Golf Balls</h4>
         </div>
 
-        <div class="col-lg-6 col-md-6 col-sm-8 col-xs-8">
-            <div class="thumbnail">
+        <div class="col-lg-10 col-md-10 col-sm-9 col-xs-8">
+            <div class="row">
                 <iframe id='ifrm' src="@ViewBag.URL" height="550" width="550" scrolling="auto" frameborder="0" style="text-align: center;">
                     Your browser does not support iFrames. To view this content, please download and use the latest version of one of the following browsers: Internet Explorer, Firefox, Google Chrome or Safari.
                 </iframe>
