--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -28,11 +28,17 @@
                 <option>Doesn't Matter</option>
             </select>
 
-            <button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
+            @*<button type="button" data-toggle="dropdown" class="btn btn-buy dropdown-toggle">Book <span class="caret"></span></button>
             <ul class="dropdown-menu">
                 <li><a ahref="#"><input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
                 <li><a ahref="#"><input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" /></a></li>
-            </ul>
+            </ul>*@
+
+            <div class="row col-lg-12">
+                <div class="">
+                    <input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" />
+                </div>
+            </div>
 
         </div>
     </div>
