--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Complete.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Complete.cshtml
@@ -29,7 +29,7 @@
 
 <div class="container">
 
-    <div class="col-sm-4 col-lg-4 col-md-4">
+    @*<div class="col-sm-4 col-lg-4 col-md-4">
         <div class="thumbnail">
             <img src="../../Content/img/henry.png" alt="" />
             <div class="caption">
@@ -41,12 +41,11 @@
             </div>
 
         </div>
-    </div>
+    </div>*@
 
-    <div class="col-sm-4 col-lg-8 col-md-4">
+    <div class="col-lg-12 col-md-8 col-sm-12 col-xs-12">
         <h2>Payment Response Details</h2>
-        <hr />
-        <table class="table table-striped table-responsive">
+        <table class="table thumbnail">
             <tr>
                 <td>
                     <b>@Html.DisplayNameFor(model => model.AcqRefData)</b>
@@ -118,4 +117,13 @@
             </tr>
         </table>
     </div>
+
+    <div class="row">
+        <div class="col-lg-12 col-md-8 col-sm-12 col-xs-12">
+            <div class="">
+                <input type="button" class="btn btn-buy" onclick="location.href='/Home';" value="Home" />
+            </div>
+        </div>
+    </div>
+
 </div>
