--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
 
             <div class="row col-lg-12">
                 <div class="">
-                    <input type="button" class="btn btn-buy" onclick="location.href='/Home/Buy';" value="Book" />
+                    <input type="button" class="btn btn-buy" onclick="location.href='/Home/Reserve';" value="Book" />
                 </div>
             </div>
 
