--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Reserve.cshtml
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Views/Home/Reserve.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Buy";
+    ViewBag.Title = "Reserve";
 }
 
 <div class="container">
     <div class="row">
-        <div class="col-lg-push-1 col-md-2 col-sm-3 col-xs-4">
+        <div class="col-lg-2 col-lg-push-1 col-md-2 col-sm-3 col-xs-4">
             <img src="../../Content/img/ball-on-tee.png" alt="" />
-            <h4 class="text-center">$4.99<br />Golf Balls</h4>
+            <h4 class="text-center">$23.23<br />Reserve Tee Time</h4>
         </div>
 
         <div class="col-lg-10 col-md-10 col-sm-9 col-xs-8">
