--- a/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/custom.css
+++ b/HostedCheckout.MVC.CSharp/HostedCheckout.MVC.CSharp/Content/custom.css
@@ -1,4 +1,4 @@
-﻿body {
+body {
     font-family: 'Raleway', sans-serif;
     font-size: 14px;
     line-height: 1.428571429;
@@ -6,9 +6,11 @@
     background-color: #ffffff;
     background-image: url('img/background.JPG');
     padding-top: 150px;
-    background-size: 1600px 1200px;
     background-repeat: no-repeat;
+    background-size: cover;
     -webkit-font-smoothing: antialiased;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .well {
